BoardMVC javascirpt, mybatis

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ local.properties
 log4j.xml
 *.jpg
 *.png
+*.scss
+*.less
+
 
 Servers/
 target/
@@ -27,6 +30,11 @@ MANIFEST.MF
 catalina.policy
 *.properties
 bootstrap-4.6.1-dist/
+bootstrap/
+metisMenu/
+font-awesome/
+
+sb-admin-2.*
 jquery-3.6.0.min.js
 
 # External tool builders
