--- a/fileupload/pom.xml
+++ b/fileupload/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.study</groupId>
 	<artifactId>controller</artifactId>
-	<name>boardMVC</name>
+	<name>fileupload</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
