--- a/fileupload/pom.xml
+++ b/fileupload/pom.xml
@@ -15,6 +15,13 @@
 	</properties>
 	<dependencies>
 	
+		<!-- 썸네일 -->
+		<dependency>
+		    <groupId>net.coobird</groupId>
+		    <artifactId>thumbnailator</artifactId>
+		    <version>0.4.17</version>
+		</dependency>
+	
 		<!-- 파일 업로드 -->
 		<dependency>
 		    <groupId>commons-fileupload</groupId>
